logo and tweet fix

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,17 +12,14 @@ output:
 library(knitr)
 library(rmarkdown)
 library(bookdown)
-library(tweetrmd)
 
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, echo=FALSE}
 htmltools::img(src = knitr::include_graphics("https://www.queensu.ca/sites/default/files/assets/pages/QueensLogo_red.png"),
-               alt = 'logo',
                width = "200px",
-               heigth = "200px",
-               style = 'position:absolute; top:0; right:0; padding:10px;')
+               heigth = "200px")
 
 ```
 
@@ -30,7 +27,7 @@ htmltools::img(src = knitr::include_graphics("https://www.queensu.ca/sites/defau
 
 Michael Shepertycky, PhD, came by the HMRL with the exoskeleton he's develop that can harvest energy during walking but also reduces the metabolic energy consumption of the user. We tested out how well Theia3D could track him while wearing the Exo!
 
-<center><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Many devices have been developed to harvest energy from walking or running, but their use often comes at cost to the wearer in the form of increased metabolic demand. Not this exoskeleton, according to a new Science study. <a href="https://t.co/nTOCqLcCkn">https://t.co/nTOCqLcCkn</a> <a href="https://t.co/m67eOlHSm0">pic.twitter.com/m67eOlHSm0</a></p>&mdash; Science Magazine <a href="https://twitter.com/ScienceMagazine/status/1398021328746201094?ref_src=twsrc%5Etfw">May 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+<center><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Many devices have been developed to harvest energy from walking or running, but their use often comes at cost to the wearer in the form of increased metabolic demand. Not this exoskeleton, according to a new Science study. <a href="https://t.co/nTOCqLcCkn">https://t.co/nTOCqLcCkn</a> <a href="https://t.co/m67eOlHSm0">pic.twitter.com/m67eOlHSm0</a></p>&mdash; Science Magazine <a href="https://twitter.com/ScienceMagazine/status/1398021328746201094?ref_src=twsrc%5Etfw">May 27, 2021</a></blockquote></center>
 
 Check out Michael's recent report published in Science to get more details on it's performance. \nocite{@Shepertycky2021}
 
