--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ Michael Shepertycky, PhD, came by the HMRL with the exoskeleton he's develop tha
 
 <center><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Many devices have been developed to harvest energy from walking or running, but their use often comes at cost to the wearer in the form of increased metabolic demand. Not this exoskeleton, according to a new Science study. </p>&mdash; Science Magazine <a href="https://twitter.com/ScienceMagazine/status/1398021328746201094?ref_src=twsrc%5Etfw">May 27, 2021</a></blockquote></center>
 
-<center><img src="tweet.gif"/></center>
+<a href="https://twitter.com/ScienceMagazine/status/1398021328746201094"><center><img src="tweet.gif"/></center></a>
 
 Check out Michael's recent report published in Science to get more details on it's performance. \nocite{@Shepertycky2021}
 
